--- a/src/components/MovieDialog/MovieDialog.scss
+++ b/src/components/MovieDialog/MovieDialog.scss
@@ -8,10 +8,10 @@
   @include modal-background();
 
   .modal {
-    @include modal($width: 80vw, $height: 75vh);
+    @include modal($width: 800px, $height: 800px);
   }
   .modal-small {
-    @include modal($width: 50vw, $height: 30vh);
+    @include modal($width: 700px, $height: 350px);
   }
 
   .modal-header {
@@ -57,8 +57,8 @@
     }
 
     &__input {
-      width: 400px;
-      height: 60px;
+      width: 350px;
+      height: 50px;
 
       background: $secondary-background-color;
       mix-blend-mode: normal;
@@ -68,7 +68,7 @@
     }
 
     &__textarea {
-      width: 60vw;
+      width: 700px;
       height: 100px;
       background: $secondary-background-color;
       mix-blend-mode: normal;
