--- a/src/components/GenresList/GenresList.scss
+++ b/src/components/GenresList/GenresList.scss
@@ -10,7 +10,7 @@
   justify-content: space-between;
   gap: 30px;
 
-  li {
+  &__item {
     @include font($weight: 500, $size: 16px, $height: 20px);
 
     text-transform: uppercase;
