--- a/src/components/MoviesSearchContainer/MoviesSearchContainer.scss
+++ b/src/components/MoviesSearchContainer/MoviesSearchContainer.scss
@@ -6,7 +6,7 @@
   width: 100%;
   background: $header-background-color;
 
-  &__background {
+  .container-background {
     position: relative;
     height: 100%;
 
@@ -19,7 +19,7 @@
     background-size: cover;
   }
 
-  &__container {
+  .search-container {
     position: absolute;
     top: 0;
     width: 100%;
@@ -30,14 +30,14 @@
     flex-direction: column;
     row-gap: 50px;
 
-    &__add-movie {
+    &__header {
       display: flex;
       justify-content: space-between;
       margin: 24px;
       background: inherit;
     }
 
-    &__add-movie:first-child {
+    &__header:first-child {
       z-index: $z-index-header;
     }
   }
