--- a/src/components/MoviesSortDropdown/MoviesSortDropdown.scss
+++ b/src/components/MoviesSortDropdown/MoviesSortDropdown.scss
@@ -6,7 +6,7 @@
   padding-top: 20px;
   width: 400px;
 
-  label {
+  &__label {
     width: 100px;
     height: 20px;
 
@@ -18,7 +18,7 @@
     opacity: 0.6;
   }
 
-  select {
+  &__list {
     height: 20px;
 
     @include font($weight: 500, $size: 16px, $height: 20px);
