--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -1,4 +1,7 @@
-@import "./fonts.scss";
+@import "styles/colors";
+@import "styles/fonts";
+@import "styles/buttons";
+@import "styles/z-index";
 
 @mixin modal-background() {
   position: fixed;
@@ -11,7 +14,7 @@
   background: rgba(35, 35, 35, 0.918051);
 }
 
-@mixin modal($width: 80vw, $height: 60vh) {
+@mixin modal($width: 80vw) {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -19,10 +22,124 @@
   display: flex;
   flex-direction: column;
   row-gap: 30px;
+  padding: 20px 20px;
   width: $width;
-  height: $height;
+  height: auto;
   z-index: $z-index-modal;
   background: $primary-background-color;
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.07),
     0px 10px 20px rgba(0, 0, 0, 0.05), 0px 10px 50px rgba(0, 0, 0, 0.05);
+}
+
+.modal-overlay {
+  @include modal-background();
+
+  .modal-dialog {
+    @include modal($width: 800px);
+  }
+
+  .modal-header {
+    display: flex;
+    flex-direction: column;
+
+    &__button {
+      display: flex;
+      justify-content: flex-end;
+      background-color: inherit;
+      border: none;
+    }
+
+    &__title {
+      @include font($weight: 300, $size: 40px, $height: 50px);
+      margin: 0 auto;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+    }
+  }
+
+  .modal-content {
+    @include font($weight: 400, $size: 20px, $height: 24px);
+    margin: 0 auto;
+
+    &__row {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
+
+    &__column-left {
+      display: flex;
+      flex-direction: column;
+      margin-right: 20px;
+    }
+
+    &__column-right {
+      display: flex;
+      flex-direction: column;
+    }
+
+    &__input {
+      width: 350px;
+      height: 50px;
+
+      background: $secondary-background-color;
+      mix-blend-mode: normal;
+      opacity: 0.8;
+      border-radius: 4px;
+      border: none;
+    }
+
+    &__textarea {
+      width: 700px;
+      height: 100px;
+      background: $secondary-background-color;
+      mix-blend-mode: normal;
+      opacity: 0.8;
+      border-radius: 4px;
+      border: none;
+
+      padding-top: 20px;
+    }
+
+    &__label {
+      margin-bottom: 14px;
+
+      @include font($weight: 600, $size: 16px, $height: 20px);
+      color: $secondary-text-color;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+
+      mix-blend-mode: normal;
+      opacity: 0.8;
+    }
+
+    &__input,
+    &__textarea {
+      padding-left: 20px;
+      @include font($weight: 400, $size: 20px, $height: 24px);
+    }
+  }
+
+  .modal-footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+
+    &__button-secondary {
+      @extend %btn--secondary-shared;
+      width: 200px;
+      height: 60px;
+
+      background: inherit;
+      border: 1.5px solid $secondary-text-color;
+    }
+
+    &__button-primary {
+      @extend %btn--primary-shared;
+      width: 200px;
+      height: 60px;
+    }
+  }
 }
