--- a/src/components/MovieDetails/MovieDetails.scss
+++ b/src/components/MovieDetails/MovieDetails.scss
@@ -21,8 +21,7 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    column-gap: 30px;
-    row-gap: 30px;
+    gap: 30px 30px;
 
     padding-bottom: 24px;
 
